--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,13 @@
             <version>8.0.0</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.eclipse.microprofile</groupId>
-            <artifactId>microprofile</artifactId>
-            <version>3.0</version>
-            <type>pom</type>
-            <scope>provided</scope>
-        </dependency>
+                <dependency>
+                        <groupId>org.eclipse.microprofile</groupId>
+                        <artifactId>microprofile</artifactId>
+                        <version>3.0</version>
+                        <type>pom</type>
+                        <scope>provided</scope>
+                </dependency>
         <!-- For tests -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -66,6 +66,12 @@
         <dependency>
             <groupId>org.microshed</groupId>
             <artifactId>microshed-testing-testcontainers</artifactId>
+            <version>0.4.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.microshed</groupId>
+            <artifactId>microshed-testing-liberty</artifactId>
             <version>0.4.1</version>
             <scope>test</scope>
         </dependency>
